// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCoverageReport() > should generate the coverage successfully when there is coverage for diff 1`] = `
"## 📊 Test Coverage Report

### Overall coverage

| Metric     | Covered/Total | Status |
| ---------- | ---------- | ---------- |
| Statements  | 5/5 | 100% 🔵 |
| Branches    | 5/7 | 71.42% 🟡 |
| Functions   | 5/5 | 100% 🔵 |
| Lines       | 379/410 | 92.43% 🔵 |

### Diff coverage report

| File | Lines | Coverage |
| ----- | ----- | ----- |
| src/index.ts | 10/10 | 100% 🔵 |
| src/green.ts | 88/100 | 88% 🟢 |
| src/yellow.ts | 77/100 | 77% 🟡 |
| src/orange.ts | 58/100 | 58% 🟠 |
| src/red.ts | 45/100 | 45% 🔴 |

> [!NOTE]
> This report was generated by [Coverage Report Action](https://github.com/lemonenergy/coverage-report-action)."
`;

exports[`generateCoverageReport() > should generate the coverage successfully when there is coverage for diff and more than 10 files 1`] = `
"## 📊 Test Coverage Report

### Overall coverage

| Metric     | Covered/Total | Status |
| ---------- | ---------- | ---------- |
| Statements  | 5/5 | 100% 🔵 |
| Branches    | 5/7 | 71.42% 🟡 |
| Functions   | 5/5 | 100% 🔵 |
| Lines       | 379/410 | 92.43% 🔵 |

### Diff coverage report

<details><summary><strong>Coverage by file</strong></summary>

<br />

| File | Lines | Coverage |
| ----- | ----- | ----- |
| src/index.ts | 10/10 | 100% 🔵 |
| src/green.ts | 88/100 | 88% 🟢 |
| src/yellow.ts | 77/100 | 77% 🟡 |
| src/orange.ts | 58/100 | 58% 🟠 |
| src/red.ts | 45/100 | 45% 🔴 |
| src/dummy1.ts | 1/1 | 100% 🔵 |
| src/dummy2.ts | 1/1 | 100% 🔵 |
| src/dummy3.ts | 1/1 | 100% 🔵 |
| src/dummy4.ts | 1/1 | 100% 🔵 |
| src/dummy5.ts | 1/1 | 100% 🔵 |
| src/dummy6.ts | 1/1 | 100% 🔵 |


</details>

> [!NOTE]
> This report was generated by [Coverage Report Action](https://github.com/lemonenergy/coverage-report-action)."
`;

exports[`generateCoverageReport() > should generate the coverage successfully when there is no coverage for diff 1`] = `
"## 📊 Test Coverage Report

### Overall coverage

| Metric     | Covered/Total | Status |
| ---------- | ---------- | ---------- |
| Statements  | 5/5 | 100% 🔵 |
| Branches    | 5/7 | 71.42% 🟡 |
| Functions   | 5/5 | 100% 🔵 |
| Lines       | 379/410 | 92.43% 🔵 |

### Diff coverage report

No files found with coverage data.

> [!NOTE]
> This report was generated by [Coverage Report Action](https://github.com/lemonenergy/coverage-report-action)."
`;
